[package]
name = "rbt3"
version = "0.1.0"
edition = "2021"
description = "Rigid body transform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chubei-oppen/rbt3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0"
